[tool.poetry]
name = "code j-comp virt cse4011"
version = "1.0"
description = "Flask (Python) project submitted for Virtualisation J-Component."
authors = ["Vishal N <dev@vishalnandagopal.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "3.0.0"
firebase-admin = "6.2.0"
requests = "2.31.0"
rsa = "4.9"
python-dotenv = "1.0.0"
faker = "20.1.0"
gunicorn = "^21.2.0"
cryptography = "^42.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
